I'm just gonna use CMkae to build this

--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,12 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+Makefile
+bin
 
 # Project folders and files
 .idea
